<resources>
    <string name="app_name">SpotifyClone</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_library">Library</string>

    <string name="album_year">Album • %s</string>
    <string name="playlist_count">Playlist • %s musics</string>
    <string name="playlist_add">Add to %s</string>
    <string name="playlist_create">Create playlist  %s</string>
    <string name="playlist_delete">Delete playlist  %s</string>
    <string name="send_reset_password_email">"Send reset password email"</string>

    <string name="add_music">"Add 1 music to playlist"</string>
    <string name="new_playlist">"New playlist"</string>
    <string name="add_to_playlist">"Add to playlist"</string>
    <string name="view_album">View album</string>
    <string name="view_artist">View artist</string>
    <string name="edit_playlist">Edit playlist</string>
    <string name="delete_playlist">Delete playlist</string>
    <string name="title">Title</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="delete_this_playlist">Delete this playlist ?</string>
    <string name="delete">Delete</string>
    <string name="enter_email">Enter your e-mail</string>
    <string name="email">E-mail</string>
    <string name="send_reset_password_email_detail">We will send you a reset password e-mail</string>
    <string name="send">Send</string>
    <string name="browse_all_albums">Browse all albums</string>
    <string name="browse_all_musics">Browse all musics</string>
    <string name="new_releases">New Releases</string>
    <string name="all_albums">All Albums</string>
    <string name="all_artists">All Artists</string>
    <string name="playlist">Playlist</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="log_in">Log in</string>
    <string name="spotify_description">Millions of musics.\n \ \ Free on Spotify.</string>
    <string name="sign_up_free">Sign up free</string>
    <string name="search_music">Search Music...</string>
    <string name="browse_all">Browse all</string>
    <string name="search_anything">Search anything</string>
    <string name="search_artist_music_amd_more">Search artist, music amd more</string>
    <string name="use_at_least_characters">Use at least 6 characters</string>
    <string name="next">Next</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign up</string>
    <string name="retry">Retry</string>
    <string name="music">Music</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
</resources>