<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".ui.common.dialog.ResetPasswordDialog">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="@dimen/layout_dialog_width"
        android:layout_height="0dp"
        android:background="@color/dark_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="3:2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/RoundedRectangle" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20"
        android:text="@string/enter_email"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:viewBindingIgnore="true" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20"
        android:backgroundTint="@color/green"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textSize="@dimen/text_size_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_5"
        android:text="@string/send_reset_password_email_detail"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintStart_toStartOf="@id/edit_email"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        tools:viewBindingIgnore="true" />

    <TextView
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_width"
        android:layout_marginEnd="@dimen/margin_10"
        android:background="@drawable/button_negative_selector"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintBottom_toBottomOf="@+id/btn_send"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toStartOf="@+id/btn_send" />

    <TextView
        android:id="@+id/btn_send"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_width"
        android:layout_margin="@dimen/margin_20"
        android:background="@drawable/button_positive_selector"
        android:gravity="center"
        android:text="@string/send"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>