<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/color_gradient_gray_black"
    android:theme="@style/Theme.SpotifyClone"
    tools:context=".ui.onboard.OnboardFragment">

    <ImageView
        android:id="@+id/image_spotify"
        android:layout_width="@dimen/image_spotify_width"
        android:layout_height="@dimen/image_spotify_width"
        android:layout_marginBottom="@dimen/margin_50"
        android:src="@drawable/spotify"
        app:layout_constraintBottom_toTopOf="@id/text_spotify"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/text_spotify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spotify_description"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_30"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/text_signup"
        android:layout_width="300dp"
        android:layout_height="0dp"
        android:background="@drawable/ic_button_positive"
        android:backgroundTint="@drawable/tint_green_selector"
        android:gravity="center"
        android:text="@string/sign_up_free"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="5:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_spotify" />

    <TextView
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_signup"
        app:layout_constraintVertical_bias="0.25" />

</androidx.constraintlayout.widget.ConstraintLayout>